firebase-keys added

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,12 @@
 VITE_GOOGLE_MAPS_API_KEY="AIzaSyDxIBa1jraQa8ZLYsCEfnCawtgEaUKKHAQ"
+
+# frontend/.env
+VITE_FIREBASE_API_KEY="AIzaSyC4xj8iy6OjNKhV6SzcUmYRJlc3TI1KMNs"
+VITE_FIREBASE_AUTH_DOMAIN="safeconnect-23929.firebaseapp.com"
+VITE_FIREBASE_PROJECT_ID="safeconnect-23929"
+VITE_FIREBASE_STORAGE_BUCKET="safeconnect-23929.firebasestorage.app"
+VITE_FIREBASE_MESSAGING_SENDER_ID="955690732453"
+VITE_FIREBASE_APP_ID= "1:955690732453:web:35927b3fc117db9028f64c"
+VITE_FIREBASE_MEASUREMENT_ID= "G-L5GJFRRMGG"
+VITE_FIREBASE_VAPID_KEY="BF8yClNO2XrpuXKJ2V5kj9lrMbjY_zAvgkBdzi2prBBw7vjrhyG19zVNPcccLNmgt6iEff1_c5UdKuu3z3y-5P4"
+
